# nisqa

./: .gitignore  Cargo.toml  cargo.toml  rust-toolchain  shell.nix
.cargo/: config.toml
crates/codification/: Cargo.toml
crates/codification/src/: lib.rs
crates/core/: Cargo.toml  main.rs
crates/digitalization/: Cargo.toml
crates/digitalization/fuzz/: Cargo.toml
crates/digitalization/fuzz/fuzz_targets/: fuzz_adc.rs  to_binary.rs  to_decimal.rs
crates/digitalization/src/: lib.rs  main.rs
crates/digitalization/tests/: lib.rs
crates/modulators/: Cargo.toml
